k8s-ingress/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
